--- a/islt_7310/introHTML_Mueller.html
+++ b/islt_7310/introHTML_Mueller.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
+<!--I wanted to think of something clever, but alas...-->
 <html lang="en-US">
 <head>
                <meta charset="utf-8">
                <title>Welcome to Hayden's Website</title>
 </head>
 <body>
-
-    Hi, everyone! My name is Hayden, and I teach middle and high school history at an after-school tutoring center in Tokyo, Japan. I am originally from Ohio in the United States but have lived in Tokyo since the summer of 2019. I have no experience in web development, so I am very much looking forward to developing those competencies in this course. I am hoping to acquire additional licensure in computer science, as I see significant need in this field and want to hone my information technology literacy so that I can better serve my students. This is my first course at the University of Missouri, and I am curious to see how the university and the School of ISLT specifically approaches pedagogy. I do have experience with online learning, having earned a Master of Education degree online. Outside of work, I love hiking and have spent over 4 months on the Appalachian Trail.
-
+    <p>Hi, everyone! My name is Hayden, and I teach middle and high school history at an after-school tutoring center in Tokyo, Japan. I am originally from Ohio in the United States but have lived in Tokyo since the summer of 2019. I have no experience in web development, so I am very much looking forward to developing those competencies in this course. I am hoping to acquire additional licensure in computer science, as I see significant need in this field and want to hone my information technology literacy so that I can better serve my students. This is my first course at the University of Missouri, and I am curious to see how the university and the School of ISLT specifically approaches pedagogy. I do have experience with online learning, having earned a Master of Education degree online. Outside of work, I love hiking and have spent over 4 months on the Appalachian Trail.</p>
 </body>
 </html>
