--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -9,17 +9,18 @@ Tested: 9/5/2021; Validated using https://validator.w3.org/nu/#textarea .
 <head>
                <meta charset="utf-8">
                <title>Home Page</title>
+               <link rel="stylesheet" href="style.css">
 </head>
 <header>    
     <h1>Welcome!</h1> 
 </header>
-<main>
+<body>
     <h2>I’m Hayden, and I want to update history education for a digital world.</h2>
         <nav></nav>
         <p>With this website, I aim to share my educational and professional background, and to encourage you to connect with me if our interests align. I hope you will click around on it to get a better sense of me as an educator, researcher, and learner. </p> 
         <br>
         <p>The About Page is a good place to get started if you are interested in what I have learned and where I have been. You can also find a short video of me there if you would like to put a face to my name. For projects and professional experience, please click the Experience Page link located above. The Teaching Philosophy Page shares more on my pedagogy and practice. If you would like to get in touch, please find my details on the Contact Page. With my work spanning several continents, I want to create a designated space for colleagues and future contacts around the world to reach out. Thank you!</p>
-</main>
+</body>
 <footer>
     <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
 </footer>
