--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -3,13 +3,13 @@
 <!-- Title: Home Page
 Use: Introduces users to site
 Author: Hayden Mueller
-Developed: 9/5/2021
-Tested: 9/5/2021; Validated using https://validator.w3.org/nu/#textarea .
+Developed: 9/9/2021
+Tested: 9/9/2021; Validated using https://validator.w3.org/nu/#textarea .
 -->
 <head>
                <meta charset="utf-8">
                <title>Home Page</title>
-               <link rel="stylesheet" href="style.css">
+               <link href="style.css">
 </head>
 <header>    
     <h1>Welcome!</h1> 
