--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -12,7 +12,7 @@ Tested: 9/9/2021; Validated using https://validator.w3.org/nu/#textarea .
                <link href="style.css">
 </head>
 <header>    
-    <h1>Welcome!</h1> 
+    <h1 class="h1">Welcome!</h1> 
 </header>
 <body>
     <h2>I’m Hayden, and I want to update history education for a digital world.</h2>
