--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -9,7 +9,7 @@ Tested: 9/9/2021; Validated using https://validator.w3.org/nu/#textarea .
 <head>
                <meta charset="utf-8">
                <title>Home Page</title>
-               <link href="style.css">
+               <link rel="stylesheet" href="style.css">
 </head>
 <header>    
     <h1 class="h1">Welcome!</h1> 
