--- a/islt_7310/Mueller_Template.html
+++ b/islt_7310/Mueller_Template.html
@@ -4,9 +4,13 @@
 <head>
                <meta charset="utf-8">
                <title>Page Title</title>
+             
 </head>
 <body>
     <nav></nav>
 
 </body>
+<footer>
+    <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
+</footer>
 </html>
