--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,7 +18,7 @@ Tested: 9/13/2021; Validated using https://validator.w3.org/nu/#textarea .
 <body>
     <h2>I’m Hayden, and I want to update history education for a digital world.</h2>
         <nav>
-            <ul class="nav_links">
+            <ul class=nav>
                 <li><a href=index.html>Home</a></li>
                 <li><a href=about.html>About</a></li>
                 <li><a href=#projects.html>Projects</a></li>
