--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -19,9 +19,9 @@ Tested: 9/13/2021; Validated using https://validator.w3.org/nu/#textarea .
     <h2>I’m Hayden, and I want to update history education for a digital world.</h2>
         <nav>
             <ul>
-                <li><a class="nav" href=index.html>Home</a></li>
-                <li><a class="nav" href=about.html>About</a></li>
-                <li><a class="nav" href=#projects.html>Projects</a></li>
+                <li><a href=index.html>Home</a></li>
+                <li><a href=about.html>About</a></li>
+                <li><a href=#projects.html>Projects</a></li>
             </ul>
         </nav>
         <p>With this website, I aim to share my educational and professional background, and to encourage you to connect with me if our interests align. I hope you will click around on it to get a better sense of me as an educator, researcher, and learner. </p> 
