--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -10,7 +10,7 @@ Tested: 9/13/2021; Validated using https://validator.w3.org/nu/#textarea .
                <meta charset="utf-8">
                <title>Home Page</title>
                <link rel="stylesheet" href="style.css">
-               <link rel="stylesheet" href="nav.css"> / this one affects the navigation /
+               <link rel="stylesheet" href="nav.css"> 
 </head>
 <header>    
     <h1 class="heading">Welcome!</h1> 
