--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -15,7 +15,7 @@ Tested: 9/16/2021; Validated using https://validator.w3.org/nu/#textarea .
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="nav">
             <li><a href=index.html>Home</a></li>
             <li><a href=about.html>About</a></li>
             <li><a href=#projects.html>Projects</a></li>
