--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -8,25 +8,28 @@ Tested: 9/16/2021; Validated using https://validator.w3.org/nu/#textarea .
  -->
 <head>
                <meta charset="utf-8">
-               <title>Page Title</title>
+               <title>Projects</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css"> 
 
 </head>
 <body>
+    <div id="content">
+    <header><h1>Projects</h1></header>
     <nav>
-        <ul class="nav">
+        <ul>
             <li><a href=index.html>Home</a></li>
             <li><a href=about.html>About</a></li>
-            <li><a href=#projects.html>Projects</a></li>
+            <li><a href=project.html>Projects</a>
                 <ul>
                     <li><a href=#Link1>Link 1</a></li>
                     <li><a href=#Link2>Link 2</a></li>
                     <li><a href=#Link3>Link 3</a></li>
                 </ul>
+            </li>
         </ul>
     </nav>
-
+</div>
 </body>
 <footer>
     <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
