--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -21,7 +21,7 @@ Tested: 9/13/2021; Validated using https://validator.w3.org/nu/#textarea .
             <ul class="nav">
                 <li><a href=index.html>Home</a></li>
                 <li><a href=about.html>About</a></li>
-                <li><a href=#projects.html>Projects</a></li>
+                <li><a href=project.html>Projects</a></li>
             </ul>
         </nav>
         <p>With this website, I aim to share my educational and professional background, and to encourage you to connect with me if our interests align. I hope you will click around on it to get a better sense of me as an educator, researcher, and learner. </p> 
