--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -13,9 +13,10 @@ Tested: 9/16/2021; Validated using https://validator.w3.org/nu/#textarea .
                <link rel="stylesheet" href="nav.css"> 
 
 </head>
+<header>
+    <h1 class="heading">Projects</h1> 
+</header>
 <body>
-    <div id="content">
-    <header><h1>Projects</h1></header>
     <nav>
         <ul>
             <li><a href=index.html>Home</a></li>
@@ -27,9 +28,23 @@ Tested: 9/16/2021; Validated using https://validator.w3.org/nu/#textarea .
                     <li><a href=#Link3>Link 3</a></li>
                 </ul>
             </li>
+            <li><a href=reflection.html>Reflection</a></li>
+            <li><a href=#contact.html>Contact</a></li>
+            </li>
         </ul>
     </nav>
-</div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 <footer>
     <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
