--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<!-- Some sort of comment would go here -->
+<!-- Title: Reflection Page
+Use: Shows Hayden's reflection
+Author: Hayden Mueller
+Developed: 9/19/2021
+Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
+ -->
 <head>
                <meta charset="utf-8">
                <title>Reflection</title>
