--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -8,6 +8,7 @@ Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
  -->
 <head>
                <meta charset="utf-8">
+               <meta name="viewport" content="width-device-width, initial-scale=1.0">
                <title>Reflection</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css"> 
