--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -9,6 +9,7 @@ Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>About Hayden</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css"> 
