--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -17,21 +17,28 @@ Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
     <h1 class="heading">Welcome!</h1> 
 </header>
 <body>
-    <nav>
-        <ul>
-            <li><a href=index.html>Home</a></li>
-            <li><a href=about.html>About</a></li>
-            <li><a href=project.html>Projects</a>
-                <ul>
-                    <li><a href=#Link1>Link 1</a></li>
-                    <li><a href=#Link2>Link 2</a></li>
-                    <li><a href=#Link3>Link 3</a></li>
+        <!-- (A) MENU WRAPPER -->
+        <nav id="hamnav">
+            <!-- (B) THE HAMBURGER -->
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger"/>      
+            <!-- (C) MENU ITEMS -->
+            <div class="dropdown" id="hamitems">
+                <ul> 
+                    <li><a href=index.html>Home</a></li>
+                    <li><a href=about.html>About</a></li>
+                    <li><a href=project.html>Projects</a>
+                        <ul>
+                            <li><a href=#Link1>Link 1</a></li>
+                            <li><a href=#Link2>Link 2</a></li>
+                            <li><a href=#Link3>Link 3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href=reflection.html>Reflection</a></li>
+                    <li><a href=#contact.html>Contact</a></li>
                 </ul>
-            </li>
-            <li><a href=reflection.html>Reflection</a></li>
-            <li><a href=#contact.html>Contact</a></li>
-        </ul>
-    </nav>
+            </div>
+        </nav>
         <br>
         <br>
         <br>
