--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -18,7 +18,7 @@ Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
 <body>
 
     <header>
-        <h1><strong>Hayden Mueller</strong></h1>
+        <h1 class="heading">Hayden Mueller</h1>
     </header>
 
     <!-- (A) MENU WRAPPER -->
@@ -52,7 +52,7 @@ Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
             <a href="Muellerresume.pdf" target="_blank">Resume </a>
             <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. I grew up in rural Ohio in the US, where I attended high school and graduated concurrently with an <strong>Associate of Science Degree</strong> from Northwest State Community College in 2015. From there, I received the National College Match Scholarship and attended Trinity College in Hartford, CT from 2015-2019. I graduated from <em>Trinity</em> with a <strong>Bachelor of Arts Degree</strong> in German Studies and Theater & Dance.<br/> I am currently enrolled in my <strong>Master’s in Education</strong> from the University of the People, which I expect to complete in October 2021. I am also a prospective applicant to the University of Missouri’s <strong>Master of Science in Learning Technologies and Design</strong> with a <em>focus</em> in Technology in Schools.</p>
             <br>
-            <iframe width="854" height="480" src="https://www.youtube.com/watch?v=52HKQYRkZMU" frameborder="0" allowfullscreen>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/watch?v=52HKQYRkZMU" allowfullscreen>
             </iframe>
             <br>
             <blockquote>“A golden rule, if you like. Be curious.” – Tim Harford, <em>How to Make the World Add Up: Ten Rules for Thinking Differently About Numbers</em>.</blockquote>
