--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -3,9 +3,10 @@
 <!-- Title: Reflection Page
 Use: Shows Hayden's reflection
 Author: Hayden Mueller
-Developed: 9/19/2021
-Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
- -->
+Developed: 9/26/2021
+Tested: 9/26/2021; Validated using https://validator.w3.org/nu/#textarea 
+CSS validated using https://jigsaw.w3.org/css-validator/.
+-->
 <head>
                <meta charset="utf-8">
                <meta name="viewport" content="width-device-width, initial-scale=1.0">
