--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -3,8 +3,9 @@
 <!-- Title: Home Page
 Use: Introduces users to site
 Author: Hayden Mueller
-Developed: 9/19/2021
-Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
+Developed: 9/26/2021
+Tested: 9/26/2021; Validated using https://validator.w3.org/nu/#textarea 
+CSS validated using https://jigsaw.w3.org/css-validator/.
 -->
 <head>
                <meta charset="utf-8">
@@ -13,10 +14,10 @@ Tested: 9/19/2021; Validated using https://validator.w3.org/nu/#textarea .
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css"> 
 </head>
-<header>    
-    <h1 class="heading">Welcome!</h1> 
-</header>
 <body>
+    <header>    
+        <h1 class="heading">Welcome!</h1> 
+    </header>
         <!-- (A) MENU WRAPPER -->
         <nav id="hamnav">
             <!-- (B) THE HAMBURGER -->
