--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -48,19 +48,42 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
 <br>
 <br>
 <br>
-    <main>
-        <h3>Background</h3>
-            <a href="Muellerresume.pdf" target="_blank">Resume </a>
-            <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. I grew up in rural Ohio in the US, where I attended high school and graduated concurrently with an <strong>Associate of Science Degree</strong> from Northwest State Community College in 2015. From there, I received the National College Match Scholarship and attended Trinity College in Hartford, CT from 2015-2019. I graduated from <em>Trinity</em> with a <strong>Bachelor of Arts Degree</strong> in German Studies and Theater & Dance.<br/> I am currently enrolled in my <strong>Master’s in Education</strong> from the University of the People, which I expect to complete in October 2021. I am also a prospective applicant to the University of Missouri’s <strong>Master of Science in Learning Technologies and Design</strong> with a <em>focus</em> in Technology in Schools.</p>
+        <h3 class="about-heading">Background</h3>
+    <main class="grid-container">
+        <div>
+            <img class="grid-container-1" src="Mueller-h-headshot.jpg" alt="Hayden's Headshot">
             <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/52HKQYRkZMU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a href="Muellerresume.pdf" target="_blank">Resume </a>
+        </div>
+        <div class="grid-container-2">
+            <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. 
+                <ul>Master of Education, University of the People
+                    <li>Graduated October, 2021</li>
+                    <li>Secondary Education focus</li>
+                    <li>4.0 GPA</li>
+                    <li>Capstone Project on MS Students' Approaches to Determining Online Source Credibility</li>
+                </ul>
+                <ul>Bachelor of Arts in German Studies/Theater & Dance, Trinity College
+                    <li>Graduated May, 2019</li>
+                    <li>3.995 GPA</li>
+                    <li>Phi Beta Kappa Member</li>
+                    <li>Won Booker Prize in German Studies for Thesis, <em>Das SS-Helferinnenkorps: Drei Phasen, Drei Frauen</em></em></li>
+                </ul>
+                <ul>Associate of Science, Northwest State Community College
+                    <li>Graduated concurrently from high school May, 2015</li>
+                    <li>4.0 GPA</li>
+                    <li>Chosen as Commencement Speaker</li>
+                </ul>
+            <br>
+            <iframe width="80%" height="100%" src="https://www.youtube.com/embed/52HKQYRkZMU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br>
             <blockquote>“A golden rule, if you like. Be curious.” – Tim Harford, <em>How to Make the World Add Up: Ten Rules for Thinking Differently About Numbers</em>.</blockquote>
+            <footer>
+                <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
+            </footer>
+        </div>
     </main>
 
-    <footer>
-        <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
-    </footer>
 
 </body>
 </html>
