--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -14,6 +14,8 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
     <title>About Hayden</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css"> 
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
+
     
 </head>
 <body>
@@ -75,11 +77,13 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                     <li>Chosen as Commencement Speaker</li>
                 </ul>
             <br>
-            <iframe width="80%" height="100%" src="https://www.youtube.com/embed/52HKQYRkZMU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-container-3">
+                <iframe width="80%" height="100%" src="https://www.youtube.com/embed/52HKQYRkZMU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <br>
             <blockquote>“A golden rule, if you like. Be curious.” – Tim Harford, <em>How to Make the World Add Up: Ten Rules for Thinking Differently About Numbers</em>.</blockquote>
             <footer>
-                <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
+                <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
             </footer>
         </div>
     </main>
