--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -58,7 +58,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <a href="Muellerresume.pdf" target="_blank">Resume </a>
         </div>
         <div class="grid-container-2">
-            <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. I'm committed to continuous development as an educator and global citizen, and I also listen to 
+            <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. I'm committed to continuous development as an educator and global citizen.                
                 <ul>Master of Education, University of the People
                     <li>Graduated October, 2021</li>
                     <li>Secondary Education focus</li>
