--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -3,8 +3,8 @@
 Title: About Page
 Use: Offers background info on Hayden Mueller
 Author: Hayden Mueller
-Developed: 9/26/2021
-Tested: 9/26/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/3/2021
+Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
 -->
 <html lang="en-US">
@@ -34,11 +34,11 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <ul> 
                 <li><a href=index.html>Home</a></li>
                 <li><a href=about.html>About</a></li>
-                <li><a href=project.html>Projects</a>
+                <li><a href=project.html>Experience</a>
                     <ul>
-                        <li><a href=#Link1>Link 1</a></li>
-                        <li><a href=#Link2>Link 2</a></li>
-                        <li><a href=#Link3>Link 3</a></li>
+                        <li><a href="project.html#Tokyo-Academics">Tokyo Academics</a></li>
+                        <li><a href="project.html#Spark">Spark Student Research</a></li>
+                        <li><a href="project.html#Women-Without-Borders">Women without Borders</a></li>
                     </ul>
                 </li>
                 <li><a href=reflection.html>Reflection</a></li>
@@ -55,10 +55,10 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
         <div>
             <img class="grid-container-1" src="Mueller-h-headshot.jpg" alt="Hayden's Headshot">
             <br>
-            <a href="Muellerresume.pdf" target="_blank">Resume </a>
+            <a class="grid-container-1" href="Muellerresume.pdf" target="_blank">Resume</a>
         </div>
         <div class="grid-container-2">
-            <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. I'm committed to continuous development as an educator and global citizen.                
+            <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. Originally from rural Ohio, I pursued undergraduate studies on the East Coast. While studying abroad in Vienna, Austria, I met my now wife, a Japanese citizen. I originally studied theater and was planning to continue my studies in an MFA program, but in my senior year of undergrad, I completed a research thesis in German Studies that changed my priorities. Studying the education programs created to indoctrinate young German women into the Nazi <em>Schutzstaffel</em>, I became intensely interested in the role curriculum plays in worldview formation. After graduating college in May 2019, we relocated to Tokyo, and I have since rigorously pursued professional development opportunities in the field of education. I am, right now, particularly interested in students' online research skills and ways to refine instruction of effective, cross-discipline research methodologies. I'm committed to continuous development as a pedagogue and global citizen.               
                 <ul>Master of Education, University of the People
                     <li>Graduated October, 2021</li>
                     <li>Secondary Education focus</li>
@@ -69,7 +69,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                     <li>Graduated May, 2019</li>
                     <li>3.995 GPA</li>
                     <li>Phi Beta Kappa Member</li>
-                    <li>Won Booker Prize in German Studies for Thesis, <em>Das SS-Helferinnenkorps: Drei Phasen, Drei Frauen</em></em></li>
+                    <li>Won Booker Prize in German Studies for Thesis, <em>Das SS-Helferinnenkorps: Drei Phasen, Drei Frauen</em></li>
                 </ul>
                 <ul>Associate of Science, Northwest State Community College
                     <li>Graduated concurrently from high school May, 2015</li>
@@ -78,7 +78,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                 </ul>
             <br>
             <div class="grid-container-3">
-                <iframe width="80%" height="100%" src="https://www.youtube.com/embed/52HKQYRkZMU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="50%" height="50%" src="https://www.youtube.com/embed/52HKQYRkZMU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <br>
             <blockquote>“A golden rule, if you like. Be curious.” – Tim Harford, <em>How to Make the World Add Up: Ten Rules for Thinking Differently About Numbers</em>.</blockquote>
