--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -3,8 +3,8 @@
 <!-- Title: Home Page
 Use: Introduces users to site
 Author: Hayden Mueller
-Developed: 9/26/2021
-Tested: 9/26/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/3/2021
+Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
 -->
 <head>
@@ -29,11 +29,11 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
                 <ul> 
                     <li><a href=index.html>Home</a></li>
                     <li><a href=about.html>About</a></li>
-                    <li><a href=project.html>Projects</a>
+                    <li><a href=project.html>Experience</a>
                         <ul>
-                            <li><a href=#Link1>Link 1</a></li>
-                            <li><a href=#Link2>Link 2</a></li>
-                            <li><a href=#Link3>Link 3</a></li>
+                            <li><a href="project.html#Tokyo-Academics">Tokyo Academics</a></li>
+                            <li><a href="project.html#Spark">Spark Student Research</a></li>
+                            <li><a href="project.html#Women-Without-Borders">Women without Borders</a></li>
                         </ul>
                     </li>
                     <li><a href=reflection.html>Reflection</a></li>
@@ -48,6 +48,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
         <h2 class="subheading">I’m Hayden, and I want to update history education for a digital world.</h2>
         <br>
         <p>With this website, I aim to share my educational and professional background, and to encourage you to connect with me if our interests align. I hope you will click around on it to get a better sense of me as an educator, researcher, and learner. </p> 
+        <p><img id="lesson" src="images/lesson.png"></p>
         <p>The About Page is a good place to get started if you are interested in what I have learned and where I have been. You can also find a short video of me there if you would like to put a face to my name. For projects and professional experience, please click the Experience Page link located above. The Teaching Philosophy Page shares more on my pedagogy and practice. If you would like to get in touch, please find my details on the Contact Page. With my work spanning several continents, I want to create a designated space for colleagues and future contacts around the world to reach out. Thank you!</p>
     </main>
     <footer>
