--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<!-- Title: Projects Page
-Use: Displays Hayden's projects
+<!-- Title: Experience Page
+Use: Displays Hayden's work experience
 Author: Hayden Mueller
-Developed: 9/26/2021
-Tested: 9/26/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/3/2021
+Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
  -->
 <head>
                <meta charset="utf-8">
                <meta name="viewport" content="width-device-width, initial-scale=1.0">
-               <title>Projects</title>
+               <title>Experience</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css"> 
 
 </head>
 <body>
     <header>
-        <h1 class="heading">Projects</h1> 
+        <h1 class="heading">Experience</h1> 
     </header>
     <!-- (A) MENU WRAPPER -->
     <nav id="hamnav">
@@ -29,11 +29,11 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <ul> 
                 <li><a href=index.html>Home</a></li>
                 <li><a href=about.html>About</a></li>
-                <li><a href=project.html>Projects</a>
+                <li><a href=project.html>Experience</a>
                     <ul>
-                        <li><a href=#Link1>Link 1</a></li>
-                        <li><a href=#Link2>Link 2</a></li>
-                        <li><a href=#Link3>Link 3</a></li>
+                        <li><a href="#Tokyo-Academics">Tokyo Academics</a></li>
+                        <li><a href="#Spark">Spark Student Research</a></li>
+                        <li><a href="#Women-Without-Borders">Women without Borders</a></li>
                     </ul>
                 </li>
                 <li><a href=reflection.html>Reflection</a></li>
@@ -41,8 +41,21 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             </ul>
         </div>
     </nav>
+    <img id="Tokyo-Academics" src="images/TA-Quote.jpg">
+    <p><strong>Role:</strong> Academic Instructor <strong>Dates:</strong> August 2019 – present <strong>Company:</strong> Tokyo Academics
+        <br><br><strong>Description:</strong> As an Academic Instructor at Tokyo Academics, I work with students from grades 3-12 in a number of subjects. My students and I meet in both one-on-one tutorial settings and group sessions. I specialize in the humanities, teaching primarily history and English language arts; however, I teach mathematics and science as needed. I also work with students on general study skills and academic planning. My students hail from around the world and attend both local Japanese and international schools. Since starting at TA, I have helped students raise their grades, develop stronger study skills, and foster a love of learning that will last them a lifetime. 
+        <br><br><strong>Reflection:</strong> Since starting at TA, I have found a true love for pedagogy that has propelled me to pursue further education and hone my craft. Working with students and their families from around the world has given me a deep appreciation for the need to apply a multicultural approach as a teacher, and I seek to bring this knowledge with me as I progress professionally.	</p>
     <br>
+    <img id="Spark" src="images/Research.jpg">
+    <p><strong>Role:</strong> Research Mentor <strong>Dates:</strong> November 2019 – present <strong>Company:</strong> Spark Student Research
+        <br><br><strong>Description:</strong> At Spark Student Research, I work one-on-one with precocious high school students who want to learn the fundamentals of rigorous research while working toward publication in a high school academic journal or conference. I start from the ground up, ensuring that students understand the epistemological foundations of research while concurrently developing the practical skills needed to efficiently follow a research question. During my time at Spark, I have worked with students on projects from the shifting role of the journalist in a world guided by blogs and soundbites to the promise of sustainable architecture offered in biomimetics. 
+        <br><br><strong>Reflection:</strong> Working with these young scholars on such diverse research projects has fostered a deeper appreciation within me for knowledge and the creation of it. I have also refined my project management skills and learned to translate complex academic terminology and concepts into easily digestible, student-led discussion. This work has made me both a better academic and teacher. </p>
     <br>
+    <img id="Women-Without-Borders" src="images/WWB-Logo.png">
+    <p><strong>Role:</strong> Research Assistant <strong>Dates:</strong> February-August 2018 <strong>Company:</strong> Women without Borders
+        <br><br><strong>Description:</strong> While at Women without Borders, I conducted background research on location-specific policies that would affect the rollout of potential projects and presented my findings to the leadership team. My role as a Research Assistant involved deep dives into policy data, government documents, and international organization reports and the subsequent synthesis of these materials for senior staff. Women without Borders specializes in capacity building and preventing violent extremism, and I supported the Director of Research directly in the development of grant proposals. I also developed content for the launch of the organization’s website in 2018 and updated past catalogues of projects for an audience of online readers.  
+       <br><br><strong>Reflection:</strong> My time at Women without Borders awakened me to the importance of critical media literacy. The organization often works with communities affected by violent extremism, and many of its projects directly equip mothers in these areas to serve as the first line of defense against the radicalization of their children. In the 21st century, the radicalization process is primarily carried out through digital tools like social media networks. After seeing this need, I knew that I wanted to be a teacher and develop better ways to teach about using the internet effectively and safely. 
+        </p>
     <br>
     <br>
     <br>
@@ -54,7 +67,7 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
     <br>
     <br>
     <footer>
-        <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
-    </footer>   
+        <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
+    </footer> 
 </body>
 </html>
