--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -3,8 +3,8 @@
 <!-- Title: Reflection Page
 Use: Shows Hayden's reflection
 Author: Hayden Mueller
-Developed: 9/26/2021
-Tested: 9/26/2021; Validated using https://validator.w3.org/nu/#textarea 
+Developed: 10/3/2021
+Tested: 10/3/2021; Validated using https://validator.w3.org/nu/#textarea 
 CSS validated using https://jigsaw.w3.org/css-validator/.
 -->
 <head>
@@ -30,11 +30,11 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
             <ul> 
                 <li><a href=index.html>Home</a></li>
                 <li><a href=about.html>About</a></li>
-                <li><a href=project.html>Projects</a>
+                <li><a href=project.html>Experience</a>
                     <ul>
-                        <li><a href=#Link1>Link 1</a></li>
-                        <li><a href=#Link2>Link 2</a></li>
-                        <li><a href=#Link3>Link 3</a></li>
+                        <li><a href="project.html#Tokyo-Academics">Tokyo Academics</a></li>
+                        <li><a href="project.html#Spark">Spark Student Research</a></li>
+                        <li><a href="project.html#Women-Without-Borders">Women without Borders</a></li>
                     </ul>
                 </li>
                 <li><a href=reflection.html>Reflection</a></li>
@@ -57,11 +57,12 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
 
             <h3>Alignment With Teaching Philosophy</h3>
             <p class="subparagraph">As a teacher, I aim to consistently model growth and humanity for my students by collaborating with my colleagues, admitting my own mistakes to the class and my peers, and improving my own pedagogical practice through research, practice, and reflection. My classroom is grounded in democratic principles and the belief that all students deserve to learn under the ideal circumstances for them. We explore universal human themes to better understand the diversity of peoples in our classroom, and we draw on the expertise of our greater community to deepen learning. Guided by these themes and a boundless curiosity, I hope to contribute to any learning institution I find myself in.</p>
+            <br>
         </main>
 
-<footer>
-    <p>Copyright Hayden Mueller 2021. hmm2nn@umsystem.edu</p>
-</footer>
+        <footer>
+            <p>Copyright Hayden Mueller 2021. <img id="phone" src="images/phone.ico" alt="phone" width="20" height="20">1+888-888-8888<img id="email" src="images/email.ico" alt="email" width="20" height="20">hmm2nn@umsystem.edu</p>
+        </footer>
 
 </body>
 
