--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -59,19 +59,22 @@ CSS validated using https://jigsaw.w3.org/css-validator/.
         </div>
         <div class="grid-container-2">
             <p>My name is Hayden Mueller, and I am a middle and high school social studies teacher based in Tokyo, Japan. Originally from rural Ohio, I pursued undergraduate studies on the East Coast. While studying abroad in Vienna, Austria, I met my now wife, a Japanese citizen. I originally studied theater and was planning to continue my studies in an MFA program, but in my senior year of undergrad, I completed a research thesis in German Studies that changed my priorities. Studying the education programs created to indoctrinate young German women into the Nazi <em>Schutzstaffel</em>, I became intensely interested in the role curriculum plays in worldview formation. After graduating college in May 2019, we relocated to Tokyo, and I have since rigorously pursued professional development opportunities in the field of education. I am, right now, particularly interested in students' online research skills and ways to refine instruction of effective, cross-discipline research methodologies. I'm committed to continuous development as a pedagogue and global citizen.               
-                <ul>Master of Education, University of the People
+                <br><br><span>Master of Education, University of the People</span>
+                <ul>
                     <li>Graduated October, 2021</li>
                     <li>Secondary Education focus</li>
                     <li>4.0 GPA</li>
                     <li>Capstone Project on MS Students' Approaches to Determining Online Source Credibility</li>
                 </ul>
-                <ul>Bachelor of Arts in German Studies/Theater & Dance, Trinity College
+                <span>Bachelor of Arts in German Studies/Theater & Dance, Trinity College</span>
+                <ul>
                     <li>Graduated May, 2019</li>
                     <li>3.995 GPA</li>
                     <li>Phi Beta Kappa Member</li>
                     <li>Won Booker Prize in German Studies for Thesis, <em>Das SS-Helferinnenkorps: Drei Phasen, Drei Frauen</em></li>
                 </ul>
-                <ul>Associate of Science, Northwest State Community College
+                <span>Bachelor of Arts in German Studies/Theater & Dance, Trinity College</span>
+                <ul>
                     <li>Graduated concurrently from high school May, 2015</li>
                     <li>4.0 GPA</li>
                     <li>Chosen as Commencement Speaker</li>
